Mengubah profile Dicoding

--- a/BatuGuntingKertasSubmission.ipynb
+++ b/BatuGuntingKertasSubmission.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "EMAIL : rafifbanner@gmail.com\n",
         "\n",
-        "PROFILE : https://www.dicoding.com/users/SolsticeID"
+        "PROFILE : https://www.dicoding.com/users/rafifbanner"
       ]
     },
     {
